# show-build

./: .dockerignore  .env.example  .gatherignore  .gitignore  .propose-config.json  ACTIVE_WORK_QUEUE.md  AUTHENTICATION_GUIDE.md  CLAUDE.md  CONVERSATION_CONTEXT.md  DIARIZATION_SERVICE_REQUEST.md  Dockerfile  IMPLEMENTATION_NOTES.md  MODAL_OVERHAUL_COMPLETE.md  NFS_INFRASTRUCTURE_UFDP.md  README-NEW.md  README.md  RECONCILE_RESUME.md  REHYDRATE.NOW  RUNDOWN_AUTO_SCAFFOLD_BEHAVIOR.md  SCRIPT_MODE_PARAGRAPH_RESIZE_UDFP.md  SHOW_BUILD_STATUS_UFDP.md  SOT_DISTRIBUTED_PROCESSING_UFDP.md  STATUS.md  UFDP_INDEX.md  UNIVERSAL_LLM_FRAMEWORK_UFDP.md  UPGLIDE_RESTORE_DIRECTIONS.md  VUETIFY_TEXTAREA_AUTOGROW_ISSUE.md  celeryconfig_windows.py  claude-9-6-2025.txt  claude_protocol_response.json  decarlos_brown_newsweek_quote.json  deploy_asterisk_conference.sh  docker-compose.dev.yml  docker-compose.postgres-replica.yml  docker-compose.yml  docker-compose.yml.bak-poolpath-20260606  draganddrop.md  enhanced_main_patch.py  gather.sh  generate_dev_docs.sh  (+22 more)
tools/sot-trace/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
tools/sot-trace/data/: alerts.db
tools/sot-trace/data/reports/: sot_20260424_231423_ae05197a__20260425-045109__manual.md  sot_20260424_231423_ae05197a__20260425-050123__manual.md  sot_20260425_141755_239976b5__20260425-181829__job-mount-divergence.md  sot_20260425_162329_a2249b38__20260425-202434__job-mount-divergence.md  (+2 more)
tools/sot-trace/sot_trace/: __init__.py  __main__.py  colors.py  reports.py  rules.py  store.py  ui.py
tools/sot-trace/sot_trace/sources/: fs.py  (+2 more)
(+964 files in other folders)
